--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,7 @@ python-decouple==3.8
 python-multipart==0.0.6
 bcrypt==4.1.2
 flower==2.0.1
-
+beautifulsoup4==4.12.2
 # dev
 pytest==7.4.1
 pytest-asyncio==0.21.1
